Suppression de post et de commentaire (#13)
