# api/src/main/resources/openapi/documentation.yaml
@@ -117,6 +117,34 @@ paths:
               schema:
                 $ref: "#/components/schemas/PostDTO"
   /posts/{id}:
+    delete:
+      description: ""
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: "Post not found"
+                Example#3:
+                  value: "Post not found"
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "object"
     get:
       description: ""
       parameters:
@@ -206,6 +234,33 @@ paths:
             '*/*':
               schema:
                 type: "boolean"
+  /posts/comment/{commentId}:
+    delete:
+      description: ""
+      parameters:
+        - name: "commentId"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: "Comment not found"
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Unit"
   /spots:
     get:
       description: ""
@@ -746,6 +801,9 @@ components:
           type: "string"
       required:
         - "content"
+    Unit:
+      type: "object"
+      properties: { }
     CreateSpotCommentRequest:
       type: "object"
       properties:
